--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
           <form action="">
             <input type="text" name="task" placeholder="Nombre de la tarea" class="inputForm"
-              autocomplete="off"/>
-            <button type="submit" class="btnCreate">
+              autocomplete="off" data-form-input/>
+            <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
             </button>
           </form>
@@ -64,6 +64,6 @@
 
 
 
-
+    <script type="text/javascript" src="codigo.js"></script>
   </body>
 </html>
