--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
             <input
               type="text"
               name="task"
-              placeholder="Nombre de la tarea"
+              placeholder="Tarea"
               class="inputForm"
               autocomplete="off"
               data-form-input
+              maxlength="30"
             />
 
-            <input type="datetime-local" data-form-date >
+            <input type="datetime-local" data-form-date class="tiempo">
 
             <button type="submit" class="btnCreate" data-form-btn>
               Agregar <i class="fas fa-plus-circle"></i>
